# ai-task-planner

./: .gitignore  .vercelignore  CLAUDE.md  package-lock.json  package.json  vitest.config.ts
gazebo/: .gitignore  Dockerfile.bridge  Dockerfile.gazebo  docker-compose.yml
gazebo/config/: bridge_config.yaml  nav2_params.yaml
gazebo/ros2_ws/src/task_planner_bridge/: package.xml  setup.cfg  setup.py
gazebo/ros2_ws/src/task_planner_bridge/launch/: bridge.launch.py
gazebo/ros2_ws/src/task_planner_bridge/task_planner_bridge/: bridge_node.py  feedback_publisher.py  plan_translator.py
gazebo/urdf/: task_bot.urdf.xacro
gazebo/worlds/: task_planner_world.sdf
src/__tests__/: actions.test.ts  astar.test.ts  domain.test.ts  executor.test.ts  schema.test.ts  validator.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/history/: route.ts
src/app/api/plan/: route.ts
src/app/api/replan/: route.ts
src/app/history/: page.tsx
src/app/playground/: page.tsx
src/app/tutorial/: page.tsx
src/components/scene/: CameraController.tsx  Container.tsx  PathVisualization.tsx  Robot.tsx  Room.tsx  SceneCanvas.tsx  SceneObject.tsx  Surface.tsx
src/components/ui/: ApiKeyInput.tsx  GazeboPanel.tsx  ModelSelector.tsx  PlanPanel.tsx  PlaybackControls.tsx  TaskInput.tsx  WorldStatePanel.tsx
src/hooks/: useExecutor.ts  useGazebo.ts
src/lib/: supabase.ts  types.ts
src/lib/executor/: executor.ts
src/lib/gazebo/: connection.ts
src/lib/planner/: astar.ts  llm-planner.ts  schema.ts  validator.ts
src/lib/world/: actions.ts  domain.ts  grid.ts  state.ts
(+1 files in other folders)
